--- a/src/modules/Home/style.css
+++ b/src/modules/Home/style.css
@@ -1,18 +1,14 @@
 .bodyHome {
   width: 100%;
-  height: 920px;
- padding: 10px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bodyForm {
   display: flex;
   flex-direction: column;
-  margin: 10% auto 0 auto;
-  width: 10%;
-}
-
-.nameLabel {
-  margin-top: 500px;
-  margin-left: 100px;
-  
+  align-items: center;
+  gap: 20px;
 }
